--- a/src/main/resources/templates/admin/customer/create.html
+++ b/src/main/resources/templates/admin/customer/create.html
@@ -10,7 +10,7 @@
                 <input type="text" id="phoneNumber" name="phoneNumber" th:value="${customer.phoneNumber}" />
 
                <div>
-                    <button class="accept" type="submit">Създай</button>
+                    <button type="submit">Създай</button>
                </div>
             </div>
         </form>
