--- a/src/main/resources/templates/admin/customer/edit.html
+++ b/src/main/resources/templates/admin/customer/edit.html
@@ -1,7 +1,7 @@
 <h1>Редактирай Клиент</h1>
 <section>
     <div>
-        <form th:action="@{/admin/car/{id}/edit(id=${car.id})}" method="POST">
+        <form th:action="@{/admin/customer/{id}/edit(id=${customer.id})}" method="POST">
             <div>
 
                 <label for="name">Име</label>
