--- a/src/main/resources/templates/admin/booking/all.html
+++ b/src/main/resources/templates/admin/booking/all.html
@@ -1,5 +1,4 @@
 <h1>Всички записи</h1>
-<p>Дата формат: месец:ден:година</p>
 <section>
     <table>
         <tr>
@@ -8,6 +7,7 @@
             <th>Клиент ID</th>
             <th>Начална дата</th>
             <th>Крайна дата</th>
+            <th>Опция</th>
         </tr>
 
         <th:block th:each="booking : ${bookings}">
@@ -17,6 +17,11 @@
                 <td>[[${booking.customerId}]]</td>
                 <td>[[${booking.startDate}]]</td>
                 <td>[[${booking.endDate}]]</td>
+                <td>
+                    <div>
+                        <button th:onclick="'location.href = ' + '\'' + @{/admin/booking/{id}/delete(id=${booking.id})} + '\''">Изтрий</button>
+                    </div>
+                </td>
             </tr>
         </th:block>
     </table>
