--- a/src/main/resources/templates/admin/car/create.html
+++ b/src/main/resources/templates/admin/car/create.html
@@ -13,7 +13,7 @@
                 <input type="text" id="imgURL" name="imgURL" th:value="${car.imgURL}"/>
 
                 <div>
-                    <button class="accept" type="submit">Създай</button>
+                    <button type="submit">Създай</button>
                 </div>
             </div>
         </form>
