--- a/src/main/resources/templates/base-layout.html
+++ b/src/main/resources/templates/base-layout.html
@@ -4,15 +4,20 @@
 
     <head th:include="fragments/head" th:with="pageTitle='Rent a Car Sofia'"></head>
 
-    <body th:inline="text">
-        <header th:if="${message}" th:text="${message}"></header>
-
+    <body>
+        <header>
+            <th:block th:include="fragments/nav">
+            </th:block>
+            <div>
+                <p th:if="${message}" th:text="${message}"></p>
+            </div>
+        </header>
         <main>
             <article>
                 <div th:include="${view}"></div>
             </article>
         </main>
 
-            <footer th:include="fragments/footer"></footer>
+        <footer th:include="fragments/footer"></footer>
     </body>
 </html>
