--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,13 +1,14 @@
+<!-- Footer Section -->
 <footer>
-    <section>
-        <div>
-            <button type="button">
-                <a id="callReference" href="tel:+359899588830" style="text-decoration: none;">
-                    <img id="callImage" src="http://freevector.co/wp-content/uploads/2011/12/60720-phone-call-button.png"/>
-                    +359899588830
-                </a>
-            </button>
-            <button type="button" th:onclick="@{window.history.back();}" class="cancel">Назад</button>
+    <div class="container">
+        <!-- social Section -->
+        <div class="socialLinks" > <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a> <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a> <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a> <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a> <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a> </div>
+        <div class="row">
+            <div class="col-md-12 col-sm-12">
+                <div class="footer-copyright">
+                    <p>&copy; 2018 Car Rentals | All Rights Reserved.</p>
+                </div>
+            </div>
         </div>
-    </section>
+    </div>
 </footer>
