--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -1,13 +1,22 @@
-<nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-        <ul class="nav navbar-nav">
-            <li><a href="/">Начало</a></li>
-            <li><a href="/car/search">Резервирайте</a></li>
-            <li><a href="/car/inclusions">Какво включва</a></li>
-            <li><a href="/taking_place">Карта</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-            <li><a href="/login"><span class="glyphicon glyphicon-user"></span>Админ?</a></li>
-        </ul>
+<!-- Navigation Section -->
+<div class="navbar custom-navbar wow fadeInDown" data-wow-duration="2s" role="navigation" id="header">
+    <div class="container">
+
+        <!-- NAVBAR HEADER -->
+        <div class="navbar-header">
+            <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <span class="icon icon-bar"></span> <span class="icon icon-bar"></span> <span class="icon icon-bar"></span> </button>
+            <!-- lOGO TEXT HERE -->
+            <a href="index.html" class="navbar-brand">Car <span>Rental</span></a> </div>
+
+        <!-- NAVIGATION LINKS -->
+        <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#home" class="smoothScroll">Начало</a></li>
+                <li><a href="#search" class="smoothScroll">Потърсете</a></li>
+                <li><a href="#about" class="smoothScroll">За</a></li>
+                <li><a href="/admin/options" class="smoothScroll">Админ</a></li>
+                <li><a href="tel:+359 899 5888 30" class="calltxt" onclick=""><i class="fa fa-phone" aria-hidden="true"></i> +359 899 5888 30</a></li>
+            </ul>
+        </div>
     </div>
-</nav>
+</div>
