--- a/src/main/resources/templates/thankYou.html
+++ b/src/main/resources/templates/thankYou.html
@@ -1,11 +1,15 @@
-<h1>Благодаря ви!</h1>
-<section>
-    <div>
-        <table>
-            <tr><td colspan="100%">Вие успешно си поръчахте кола при нас!</td></tr>
-            <tr><td colspan="100%">Скоро ще ви се обадим!</td></tr>
+<th:block th:include="fragments/contentTitle" th:with="contentTitle='Браво!'">
+</th:block>
 
-            <th:block th:include="fragments/takingAddress"></th:block>
-        </table>
+<div class="successpage">
+	<div class="container">
+    	<div class="ints">
+        <img th:src="@{/images/check.png}" alt="" />
+        <h1>Успешна Заявка</h1>
+    	<h2>Скоро ще ви се обадим</h2>
+        <p>Между временно може да видите от къде ще вземете колата на картата</p>
+        <a href="/taking_place" class="btn">Към карта с място на взимане</a>
+        <a href="/" class="btn">Към начална страница</a>
+        </div>
     </div>
-</section>
+</div>
