Nav updated, Transfered css to web links from local

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -26,10 +26,10 @@
                         <br>
                         Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
                     <ul class="orderlist">
-                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                        <li>Sed a mauris at ex lobortis hendrerit in nec felis.</li>
-                        <li>Nunc sed urna sit amet sapien rhoncus pretium congue id sem.</li>
-                        <li>Vivamus sagittis sapien a tellus consequat rutrum.</li>
+                        <li>Без лимит на километрите.</li>
+                        <li>Включва  всички застраховки.</li>
+                        <li>Без скрити такси и комисионни.</li>
+                        <li>Гъвкави условия.</li>
                         <li>Mauris at justo malesuada ligula accumsan tincidunt quis efficitur orci.</li>
                     </ul>
                 </div>
