--- a/src/main/resources/templates/fragments/banner.html
+++ b/src/main/resources/templates/fragments/banner.html
@@ -5,10 +5,10 @@
         <div class="row">
             <div class="col-md-offset-1 col-md-10 col-sm-12">
                 <div class="slide-text">
-                    <h3>What we offer? <a href="" class="typewrite" data-period="2000" data-type='[ "Car Rental", "Special Rates", "One Way Rental", "City to City", "Free Rides" ]'> <span class="wrap"></span> </a> </h3>
-                    <h1>Welcome to Car Rental Template!</h1>
+                    <h3>Какво предлагаме? <a href="" class="typewrite" data-period="2000" data-type='[ "Коли под наем", "Специални намаления", "One Way Rental", "City to City", "Free Rides" ]'> <span class="wrap"></span> </a> </h3>
+                    <h1>Добре дошли в Rent Auto - Sofia!</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <a href="#about" class="btn btn-default section-btn">Get Started</a> </div>
+                    <a href="/#about" class="btn btn-default section-btn">Get Started</a> </div>
             </div>
         </div>
     </div>
