--- a/src/main/resources/templates/empty-client-base-layout.html
+++ b/src/main/resources/templates/empty-client-base-layout.html
@@ -2,10 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 
-<head th:include="fragments/headAdmin" th:with="pageTitle='Rent a Car Sofia'"></head>
+<head th:include="fragments/head" th:with="pageTitle='Rent a Car Sofia'"></head>
 
-<body>
+<body data-spy="scroll" data-target=".navbar-collapse" data-offset="50"
+      th:inline="text">
+
 <header>
+
     <div>
         <p th:if="${message}" th:text="${message}"></p>
     </div>
@@ -16,5 +19,7 @@
     </article>
 </main>
 
+<th:block th:include="fragments/scripts">
+</th:block>
 </body>
 </html>
