--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -6,15 +6,18 @@
         <div class="navbar-header">
             <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <span class="icon icon-bar"></span> <span class="icon icon-bar"></span> <span class="icon icon-bar"></span> </button>
             <!-- lOGO TEXT HERE -->
-            <a href="index.html" class="navbar-brand">Car <span>Rental</span></a> </div>
+            <a href="/" class="navbar-brand">Sofia <span>RentAuto</span></a> </div>
 
         <!-- NAVIGATION LINKS -->
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#home" class="smoothScroll">Начало</a></li>
-                <li><a href="#search" class="smoothScroll">Потърсете</a></li>
-                <li><a href="#about" class="smoothScroll">За</a></li>
-                <li><a href="/admin/options" class="smoothScroll">Админ</a></li>
+                <li><a href="/#home" class="smoothScroll">Начало</a></li>
+                <li><a href="https://drive.google.com/uc?export=download&amp;id=1VqlTGN6csN1KcLiStmg10v5IvlQJRP-Z">
+                    Пълни условия
+                </a></li>
+                <li><a href="/#search" class="smoothScroll">Потърсете</a></li>
+                <li><a href="/#about" class="smoothScroll">За</a></li>
+                <li><a href="/admin/options">Админ</a></li>
                 <li><a href="tel:+359 899 5888 30" class="calltxt" onclick=""><i class="fa fa-phone" aria-hidden="true"></i> +359 899 5888 30</a></li>
             </ul>
         </div>
