--- a/src/main/resources/templates/fragments/services.html
+++ b/src/main/resources/templates/fragments/services.html
@@ -3,16 +3,16 @@
     <div class="container">
         <!-- Section Title -->
         <div class="section-title" >
-            <h3>Car Rental <span>Services</span></h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce aliquet, massa ac ornare feugiat, nunc dui auctor ipsum, sed posuere eros sapien id quam. Maecenas odio nisi, efficitur eget</p>
+            <h3>RentAuto <span>Услуги</span></h3>
+            <p></p>
         </div>
         <div class="row">
             <!-- Service 1 -->
             <div class="col-md-4 col-sm-6">
                 <div class="service-thumb">
                     <div class="thumb-icon"><i class="fa fa-phone" aria-hidden="true"></i></div>
-                    <h4>Phone Reservation</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit pellentesque.</p>
+                    <h4>Резервация по телефона</h4>
+                    <p>Просто ни се обаждате и ни казвате детайлите.</p>
                 </div>
             </div>
 
@@ -20,17 +20,8 @@
             <div class="col-md-4 col-sm-6">
                 <div class="service-thumb">
                     <div class="thumb-icon"><i class="fa fa-money" aria-hidden="true"></i></div>
-                    <h4>Special Rates</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit pellentesque.</p>
-                </div>
-            </div>
-
-            <!-- Service 3 -->
-            <div class="col-md-4 col-sm-6">
-                <div class="service-thumb">
-                    <div class="thumb-icon"><i class="fa fa-road" aria-hidden="true"></i></div>
-                    <h4>One Way Rental</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit pellentesque.</p>
+                    <h4>Специални намаления</h4>
+                    <p>Предлагаме намаления в зависимост от периода на взимане.</p>
                 </div>
             </div>
 
@@ -38,26 +29,8 @@
             <div class="col-md-4 col-sm-6">
                 <div class="service-thumb">
                     <div class="thumb-icon"><i class="fa fa-umbrella" aria-hidden="true"></i></div>
-                    <h4>Life Insurance</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit pellentesque.</p>
-                </div>
-            </div>
-
-            <!-- Service 5 -->
-            <div class="col-md-4 col-sm-6">
-                <div class="service-thumb">
-                    <div class="thumb-icon"><i class="fa fa-building" aria-hidden="true"></i></div>
-                    <h4>City to City</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit pellentesque.</p>
-                </div>
-            </div>
-
-            <!-- Service 6 -->
-            <div class="col-md-4 col-sm-6">
-                <div class="service-thumb">
-                    <div class="thumb-icon"><i class="fa fa-car" aria-hidden="true"></i></div>
-                    <h4>Free Rides</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit pellentesque.</p>
+                    <h4>Пълна застраховка</h4>
+                    <p>Предлагаме пълна застраховка за ЕС.</p>
                 </div>
             </div>
         </div>
