Design updated; Email sender added (not tested)

--- a/src/main/resources/templates/fragments/counterSection.html
+++ b/src/main/resources/templates/fragments/counterSection.html
@@ -5,17 +5,17 @@
             <div class="col-md-4 col-sm-4 col-xs-12 counter-item">
                 <div class="counterbox">
                     <div class="counter-icon"><i class="fa fa-users" aria-hidden="true"></i></div>
-                    <span class="counter-number" data-from="1" data-to="499" data-speed="1000"></span> <span class="counter-text">Доволни клиенти</span> </div>
+                    <span class="counter-number" data-from="1" data-to="134" data-speed="1000"></span> <span class="counter-text">Доволни клиенти</span> </div>
             </div>
             <div class="col-md-4 col-sm-4 col-xs-12 counter-item">
                 <div class="counterbox">
                     <div class="counter-icon"><i class="fa fa-car" aria-hidden="true"></i></div>
-                    <span class="counter-number" data-from="1" data-to="199" data-speed="2000"></span> <span class="counter-text">Коли</span> </div>
+                    <span class="counter-number" data-from="1" data-to="19" data-speed="2000"></span> <span class="counter-text">Коли</span> </div>
             </div>
             <div class="col-md-4 col-sm-4 col-xs-12 counter-item">
                 <div class="counterbox">
-                    <div class="counter-icon"><i class="fa fa-trophy" aria-hidden="true"></i></div>
-                    <span class="counter-number" data-from="1" data-to="199" data-speed="4000"></span> <span class="counter-text">Награди</span> </div>
+                    <div class="counter-icon"><i class="fa fa-bus" aria-hidden="true"></i></div>
+                    <span class="counter-number" data-from="1" data-to="3" data-speed="4000"></span> <span class="counter-text">Бусове</span> </div>
             </div>
         </div>
     </div>
