--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -2,35 +2,29 @@
 <div id="about">
     <div class="container">
         <div class="section-title">
-            <h3>About <span>Car Rental</span> Template</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce aliquet, massa ac ornare feugiat, nunc dui auctor ipsum, sed posuere eros sapien id quam. Maecenas odio nisi, efficitur eget</p>
+            <h3>За <span>Sofia</span> RentAuto</h3>
+            <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce aliquet, massa ac ornare feugiat, nunc dui auctor ipsum, sed posuere eros sapien id quam. Maecenas odio nisi, efficitur eget</p>-->
         </div>
         <div class="about-desc">
             <div class="row">
                 <div class="col-md-7">
                     <ul class="circleList row">
-                        <li class="col-md-4 col-sm-4">
+                        <li class="col-md-6 col-sm-6">
                             <div class="cricle"><i class="fa fa-car" aria-hidden="true"></i></div>
-                            <div class="title">Mauris convallis felis</div>
+                            <div class="title">Американски автомобили</div>
                         </li>
-                        <li class="col-md-4 col-sm-4">
-                            <div class="cricle"><i class="fa fa-users" aria-hidden="true"></i></div>
-                            <div class="title">Mauris convallis felis</div>
-                        </li>
-                        <li class="col-md-4 col-sm-4">
+                        <li class="col-md-6 col-sm-6">
                             <div class="cricle"><i class="fa fa-tags" aria-hidden="true"></i></div>
-                            <div class="title">Mauris convallis felis</div>
+                            <div class="title">Ниски цени</div>
                         </li>
                     </ul>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. <br>
-                        <br>
-                        Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+                    <p>Предлагаме американски автомобили и джипове с LPG системи, с разход на гориво - около &euro; 5 на 100км.<br>
+                    </p>
                     <ul class="orderlist">
                         <li>Без лимит на километрите.</li>
                         <li>Включва  всички застраховки.</li>
                         <li>Без скрити такси и комисионни.</li>
                         <li>Гъвкави условия.</li>
-                        <li>Mauris at justo malesuada ligula accumsan tincidunt quis efficitur orci.</li>
                     </ul>
                 </div>
                 <div class="col-md-5">
