--- a/src/main/resources/templates/client-base-layout.html
+++ b/src/main/resources/templates/client-base-layout.html
@@ -23,7 +23,7 @@
     </article>
 </main>
 
-<footer th:include="fragments/footer"></footer>
+<!--<footer th:include="fragments/footer"></footer>-->
 
 <th:block th:include="fragments/scripts">
 </th:block>
