--- a/src/main/resources/templates/fragments/contact-map.html
+++ b/src/main/resources/templates/fragments/contact-map.html
@@ -5,7 +5,7 @@
         <!-- Dection Title -->
         <div class="section-title" >
             <h3>Свържете се с <span>Нас</span></h3>
-            <p>На картата е изобразен адреса на взимане на колата по подразбиране.<br/>
+            <p>На картата е адреса на взимане на колата по подразбиране.<br/>
             Ако искате да я вземете от другаде, моля свържете се с нас.</p>
         </div>
 
