--- a/src/main/resources/templates/admin/car/edit.html
+++ b/src/main/resources/templates/admin/car/edit.html
@@ -3,6 +3,9 @@
     <div>
         <form th:action="@{/admin/car/{id}/edit(id=${car.id})}" method="POST">
             <div>
+                <label for="id">ID:</label>
+                <input type="text" id="id" name="id" th:value="${car.id}" disabled="disabled" />
+
                 <label for="name">Име</label>
                 <input type="text" id="name" name="name" th:value="${car.name}" />
 
@@ -11,6 +14,21 @@
 
                 <label for="imgURL">URL на картинка</label>
                 <input type="text" id="imgURL" name="imgURL" th:value="${car.imgURL}"/>
+
+                <label class="check-container">LPG?
+                    <input type="checkbox" name="LPG" th:checked="${car.LPG}">
+                    <span class="checkmark"></span>
+                </label>
+
+                <label>
+                    Превключване:
+                    <select class="form-control" id="transmission" name="transmission" th:value="${car.transmission}">
+                        <option th:each="transmission : ${T(com.rentautosofia.rentacar.transmission.Transmission).values()}"
+                                th:value="${transmission}"
+                                th:text="${transmission}">
+                        </option>
+                    </select>
+                </label>
 
                 <div>
                     <p>Снимка:</p>
