--- a/src/main/resources/templates/fragments/tableBodyCommon.html
+++ b/src/main/resources/templates/fragments/tableBodyCommon.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<td>[[${car.name}]]</td>
+<td>[[${car.price}]]</td>
+<td>[[${car.LPG}]]</td>
+<td>[[${car.transmission}]]</td>
+<td>[[${car.id}]]</td>
