--- a/src/main/resources/templates/fragments/tableHeadCommon.html
+++ b/src/main/resources/templates/fragments/tableHeadCommon.html
@@ -1,2 +1,6 @@
 <th:block th:include="fragments/tableHeadImageName"></th:block>
 <th>Цена На<br/>Ден (&euro;)</th>
+<th>LPG</th>
+<th>превключване</th>
+<th>ID</th>
+<th>Опции</th>
